Aligned the forgot password button
solved the alignment issue of forgot password button

--- a/Web-Project/HTML/Login-Form/style.css
+++ b/Web-Project/HTML/Login-Form/style.css
@@ -57,4 +57,7 @@
     a{  
         float: right;  
         background-color: grey;  
-    }  
+    }
+    .password{
+          margin-right: 260px;
+        }
